--- a/index.html
+++ b/index.html
@@ -78,10 +78,30 @@
         </div>
     </div>
 </section>
+
+<section class="run-container">
+<div class="run-content">
+    <h3 class="run-title">Run an Extra 
+        Mile Easily</h3>
+    <p class="run-des">We believe fitness should be accessible to everyone, everywhere, regardless of income or access to a gym. With hundreds of professional workouts.</p>
+    <button class="primary-btn">Join Now</button>
+</div>
+<div class="run-image">
+    <img src="./images/run.jpg" alt="">
+</div>
+
+</section>
+
+
     </header>
 
     <!-- main part -->
-     <main></main>
+     <main>
+
+
+
+        
+     </main>
 
      <!-- footer part -->
 <footer></footer>
