--- a/index.html
+++ b/index.html
@@ -235,9 +235,46 @@
 
      <!-- footer part -->
 <footer>
+<section class="footer-container">
 
-
+<div class="footer-content">
+<div class="footer-content-div-1">
+    <div class="first-content">
+        <h3 class="content-title">Fitness</h3>
+    <p class="content-des">We believe fitness should be accessible to everyone, everywhere, regardless of income or access to a gym. With hundreds of professional workouts.</p>
+    </div>
+</div>
+<div class="footer-second-content">
+    <div class="footer-content-div-2">
+        <h5 class="content-2-title">Get Started</h5>
+        <ol class="item">
+            <li>Service</li>
+            <li>Contact Us</li>
+            <li>Affiliate Program</li>
+            <li>About Us</li>
+        </ol>
+    </div>
+    <div class="footer-content-div-3">
+        <h5 class="content-2-title">Get Started</h5>
+        <ol class="item">
+            <li>Fitness</li>
+            <li>Platform</li>
+            <li>Workout Libary</li>
+            <li>App Design</li>
+        </ol>
+    </div>
     
+</div>
+
+</div>
+
+<div class="footer-last">
+    <p>All right reserved @Fitness 2024</p>
+</div>
+
+</section>
+
+
 </footer>
 </body>
 </html>
