added the unique section

--- a/index.html
+++ b/index.html
@@ -100,7 +100,72 @@
 
     <!-- main part -->
      <main>
-<section class="unique-section-container"></section>
+<section class="unique-section-container">
+
+    
+<div class="unique-section-content">
+    <h3 class="unique-title">Digital Platform and Some Tech Gadgets </h3>
+    <p class="unique-des">
+        In the era of internet, we can benefitted from the online courses or from online video we can learn easily. Also by the help of tech gadgets we can get many advantages as well.
+    </p>
+</div>
+
+<div class="video-content">
+    <iframe max-width="860" height="350"  src="https://www.youtube.com/embed/IT94xC35u6k?si=4z25nSuGnDyxevZu" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+</div>
+
+<div class="gadget-container">
+
+<div class="gadget-content">
+    <div class="gadget-image">
+        <img src="./images/smartwatch.jpg" alt="">
+    </div>
+    <h5 class="gadget-title">Garmin</h5>
+    <p class="gadget-des"> Track your fitness, sleep patterns, heart rate, and calories burned, and even provide basic health screenings such as an electrocardiogram (EGG) and blood oxygen levels.</p>
+    <p class="gadget-price">Cost: $350-$1,300</p>
+</div>
+<div class="gadget-content">
+    <div class="gadget-image">
+        <img src="./images/ring.webp" alt="">
+    </div>
+    <h5 class="gadget-title">Ōura Ring </h5>
+    <p class="gadget-des">Collects data about your sleep cycles, activity levels, heart rate, and body temperature.</p>
+    <p id="specific" class="gadget-price">Cost: $299-$399</p>
+</div>
+<div class="gadget-content">
+    <div class="gadget-image">
+        <img src="./images/theragun-mini-gun.webp" alt="">
+    </div>
+    <h5 class="gadget-title">Theragun Wave Roller Massager</h5>
+    <p  class="gadget-des">Provides a deep tissue massage, which aids in the reduction of muscle soreness and tension, which are common issues following a hard workout.</p>
+    <p id="specific1" class="gadget-price">Cost: $219.00</p>
+</div>
+<div class="gadget-content">
+    <div class="gadget-image">
+        <img src="./images/torras-coolify.webp" alt="">
+    </div>
+    <h5 class="gadget-title">Torras Coolify 2 Neck Air Conditioner</h5>
+    <p class="gadget-des">Help in reducing body temperature and preventing overheating during demanding activities.</p>
+    <p id="specific2" class="gadget-price">Cost: $236.00</p>
+</div>
+<div class="gadget-content">
+    <div class="gadget-image">
+        <img src="./images/xiaom-mi-composition.webp" alt="">
+    </div>
+    <h5 class="gadget-title">Xiaomi Mi Body Composition Scale 2</h5>
+    <p class="gadget-des">Measure a variety of body parameters, including weight, BMI, body fat, muscle mass, bone density, and water content.</p>
+    <p id="specific3" class="gadget-price">Cost: $34.90</p>
+</div>
+<div class="gadget-content">
+    <div class="gadget-image"><img src="./images/Apollo™ Wearable.jpg" alt=""></div>
+    <h5 class="gadget-title">Apollo™ Wearable</h5>
+    <p class="gadget-des">soothe your nervous system and help you regulate your stress response. </p>
+    <p id="specific4" class="gadget-price">Cost: $349</p>
+</div>
+
+</div>
+    
+</section>
 <!-- unique section end -->
 
 
