--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
 </div>
 
 <div class="video-content">
-    <iframe max-width="860" height="350"  src="https://www.youtube.com/embed/IT94xC35u6k?si=4z25nSuGnDyxevZu" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+    <iframe width="860" height="350"  src="https://www.youtube.com/embed/IT94xC35u6k?si=4z25nSuGnDyxevZu" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 </div>
 
 <div class="gadget-container">
